2023-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test49-without-remote-files):
	* tramp-tests.el (tramp-test49-without-remote-files): New tests.
	(tramp-test50-unload): Rename.

2023-07-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test33-environment-variables): Adapt test.

2023-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (%.log): Set EXTRA_ARGS.
	(%-tests): Use it.

2023-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test49-unload): Extend test.

2023-07-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (remote-file-name-access-timeout): Declare.
	(tramp-test18-file-attributes): Extend test.

2023-06-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test34-connection-local-variables)
	(tramp-test34-explicit-shell-file-name): Don't let-bind
	`connection-local-profile-alist' and `connection-local-criteria-alist'.

2023-06-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test02-file-name-dissect)
	(tramp-test02-file-name-dissect-simplified)
	(tramp-test02-file-name-dissect-separate): Adapt tests.

2023-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (all): Use function read syntax where appropriate.
	(tramp-test39-detect-external-change): Let-bind
	`read-from-minibuffer' instead of `yes-or-no-p'.

2023-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test26-interactive-file-name-completion):
	Adapt test.

2023-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-display-escape-sequence-regexp): Dont't declare.
	(tramp-test28-process-file, tramp-test32-shell-command):
	Use `ansi-color-control-seq-regexp'.
	(tramp-test45-asynchronous-requests): Adapt test.

2023-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-use-connection-share): Declare.
	(tramp--test-putty-p): New defun.